<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userField"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/userFieldLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/userFieldLogo"
        android:textColor="@color/parchment"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userFieldFilms"
        android:layout_width="273dp"
        android:layout_height="82dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/userFieldFilms"
        android:textColor="@color/parchment"
        android:textSize="18sp"
        app:backgroundTint="@color/chestnutTree"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userFieldFavoriteFilms"
        android:layout_width="273dp"
        android:layout_height="82dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/userFieldFavoriteFilms"
        android:textColor="@color/parchment"
        android:textSize="18sp"
        app:backgroundTint="@color/chestnutTree"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userFieldReturn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="610dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/userFieldReturn"
        android:textColor="@color/parchment"
        android:textSize="18sp"
        app:backgroundTint="@color/chestnutTree"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>