<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/nameBar"
        android:textColor="@color/parchment"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/authorization"
        android:layout_width="273dp"
        android:layout_height="82dp"
        android:layout_marginTop="233dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/newUser"
        android:textColor="@color/parchment"
        android:textSize="18sp"
        app:backgroundTint="@color/chestnutTree"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enterMain"
        android:layout_width="273dp"
        android:layout_height="82dp"
        android:layout_marginTop="77dp"
        android:text="@string/enter"
        android:textColor="@color/parchment"
        android:textSize="18sp"
        app:backgroundTint="@color/chestnutTree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization" />
</androidx.constraintlayout.widget.ConstraintLayout>